font size to big on mobile device, quick fix

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ p {
     background-color: #151515;
     box-shadow: inset 0 -1px #1d1d1d;
     transition: all 0.25s ease-in;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 }
 
 .nav a:focus,
